<resources>
    <string name="app_name">StockSage</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="search">Search</string>
    <string name="profile_value">Portfolio value : %1$s</string>
    <string name="bs_share_count">Stock count</string>
    <string name="bs_stock_price">Current stock price</string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="_0_00">$0.00</string>
    <string name="_0">0</string>
    <string name="empty_home">Your watchlist is empty right now. You can add some by tapping on the
        search button and buying some stock.</string>
    <string name="dash">-</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password : (Min 6 letters)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signin">SigninActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign out</string>
    <string name="sv_high">Today\'s high</string>
    <string name="sv_low">Today\'s low</string>
    <string name="sv_open">Open price</string>
    <string name="sv_previous_close">Previous closing price</string>
    <string name="sv_volume">Stock volume</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_home">Go to home</string>
</resources>